@@ -1,4 +1,5 @@
 Version 4.0.12 (2013-11-xx)
+	Added new media_scripts option to the media plugin. This makes it possible to embed videos using script elements.
 	Fixed bug where div block formats in inline mode where applied to all paragraphs within the editor.
 	Fixed bug where div blocks where marked as an active format in inline mode when doing non collapsed selections.
 	Fixed bug where the importcss plugin wouldn't append styles if the style_formats option was configured.
